<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/view_background"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:hint="Input Subject"
        android:padding="10dp" />

    <EditText
        android:id="@+id/story"
        android:layout_below="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:ems="10"
        android:hint="Input What your reporting here"
        android:inputType="textMultiLine"
        android:visibility="visible" />

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/story"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="Add location"
        android:inputType="textPostalAddress"
        android:padding="10dp" />


   <RelativeLayout
        android:layout_below="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       android:gravity="center"
        android:orientation="horizontal">

        <!-- Capture picture button -->

       <Button
          android:id="@+id/btnsubmit"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="20dp"
          android:background="@drawable/button_selector"
          android:text="@string/submit"
           android:layout_margin="10dp"
          android:textColor="@color/white" />


      <Button
          android:id="@+id/btnRecordImage"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:layout_toEndOf="@id/btnsubmit"
          android:background="@drawable/button_selector"
          android:text="@string/uploadimage"
          android:textColor="@color/white" />
       <Button
           android:id="@+id/btnRecordVideo"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_margin="10dp"
           android:layout_toEndOf="@id/btnRecordImage"
           android:background="@drawable/button_selector"
           android:text="@string/uploadvideo"
           android:textColor="@color/white" />
  </RelativeLayout>




</RelativeLayout>